--- a/index.html
+++ b/index.html
@@ -6,8 +6,62 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+
+<section id="hero">
+    <div class="container">
+        <div class="hero">
+            <h1>Давайте знакомиться: <br>
+                МЫ - <span>строительная компания INSIDE</span>
+            </h1>
+
+            <div class="hero--group">
+                <div class="hero--group--first">
+                    <img src="./img/photo_2021-06-29_21--1%201.png" alt="img">
+
+
+                    <div class="hero--group--first--one">
+                        <img src="./img/logo.svg" alt="img">
+
+                        <ul>Роман Грошев</ul>
+                        <p>Технический <br> директор СК INSIDE</p>
+                    </div>
+                    <button>Связаться с романом</button>
+                </div>
+
+                <div class="hero--group--first">
+                    <img src="./img/photo_2021-06-29_21-%202.png" alt="img">
+
+
+                    <div class="hero--group--first--one">
+                        <img src="./img/logo.svg" alt="img">
+
+                        <ul>Руслан Исаев</ul>
+                        <p>Директор сметно - <br>
+                            договорного отдела СК INSIDE</p>
+                    </div>
+                    <button>Связаться с русланом</button>
+                </div>
+
+                <div class="hero--group--first">
+                    <img src="./img/photo_2021-06-29_21--2%201.png" alt="img">
+
+
+                    <div class="hero--group--first--one">
+                        <img src="./img/logo.svg" alt="img">
+
+                        <ul>Екатерина Светлова</ul>
+                        <p>Ведущий дизайнер <br>
+                            СК INSIDE</p>
+                    </div>
+                    <button>Связаться с екатериной</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
 </body>
 </html>
