--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
+    />
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -63,5 +67,76 @@
     </div>
 </section>
 
+<section id="swiper-group">
+    <div class="container">
+        <div class="swiper-group">
+            <h2><span>Познакомьтесь</span> с нашими мастерами</h2>
+
+            <div class="swiper-group--swiper--mySwiper">
+                <div class="swiper--group--swiper--mySwiper--wrapper">
+                    <div class="swiper--group--swiper--mySwiper--wrapper--swiper--slide">
+                        <img src="./img/man.svg" alt="img">
+                        <div class="swiper-slide--one">
+                            <h3>Иван канатаев</h3>
+                            <ul>Оценка мастера</ul>
+                            <div></div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">Slide 2</div>
+                    <div class="swiper-slide">Slide 3</div>
+                    <div class="swiper-slide">Slide 4</div>
+                    <div class="swiper-slide">Slide 5</div>
+                    <div class="swiper-slide">Slide 6</div>
+                    <div class="swiper-slide">Slide 7</div>
+                    <div class="swiper-slide">Slide 8</div>
+                    <div class="swiper-slide">Slide 9</div>
+                </div>
+                <div class="swiper-pagination"></div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section id="pro">
+    <div class="container">
+        <div class="pro">
+            <h4>Используем только высокоточное
+                <br> <span>
+                    профессиональное оборудование
+                </span>
+            </h4>
+
+            <div class="pro--blocks">
+                <div class="pro--blocks--first">
+                    <div class="pro--blocks--first--one">
+                        <img src="./img/yellow.png" alt="img">
+                        <div class="pro--blocks--first--one__bloc">
+                            <img src="./img/one.svg" alt="img">
+                            <h2>Лазерное оборудование для идеальной <br>
+                                точности и контроля качества ремонта.
+                            </h2>
+                            <span>Как результат:</span>
+                            <p>Ваши стены и углы будут идеально ровными.</p>
+                        </div>
+                    </div>
+                    <div class="pro--blocks--first--one">
+                        <img src="./img/yellow.png" alt="img">
+                        <div class="pro--blocks--first--one__bloc">
+                            <img src="./img/one.svg" alt="img">
+                            <h2>Лазерное оборудование для идеальной <br>
+                                точности и контроля качества ремонта.
+                            </h2>
+                            <span>Как результат:</span>
+                            <p>Ваши стены и углы будут идеально ровными.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+<script src="js/script.js"></script>
 </body>
 </html>
