--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
     <div class="container">
         <div class="hero">
             <h1>Давайте знакомиться: <br>
-                МЫ - <span>строительная компания INSIDE</span>
+                МЫ - <span>строительная  компания INSIDE</span>
             </h1>
 
             <div class="hero--group">
                 <div class="hero--group--first">
-                    <img src="./img/photo_2021-06-29_21--1%201.png" alt="img">
+
+                    <img src="./img/photo_2021-06-29_21--1%201.png" alt="img"
+                         class="hero--group--first--img">
 
 
                     <div class="hero--group--first--one">
@@ -31,11 +33,12 @@
                     <button>Связаться с романом</button>
                 </div>
 
-                <div class="hero--group--first">
-                    <img src="./img/photo_2021-06-29_21-%202.png" alt="img">
+                <div class="hero--group--second">
+                    <img src="./img/photo_2021-06-29_21-%202.png" alt="img"
+                         class="hero--group--second--img">
 
 
-                    <div class="hero--group--first--one">
+                    <div class="hero--group--second--two">
                         <img src="./img/logo.svg" alt="img">
 
                         <ul>Руслан Исаев</ul>
@@ -45,11 +48,12 @@
                     <button>Связаться с русланом</button>
                 </div>
 
-                <div class="hero--group--first">
-                    <img src="./img/photo_2021-06-29_21--2%201.png" alt="img">
+                <div class="hero--group--third">
+                    <img src="./img/photo_2021-06-29_21--2%201.png" alt="img"
+                         class="hero--group--third--img">
 
 
-                    <div class="hero--group--first--one">
+                    <div class="hero--group--third--three">
                         <img src="./img/logo.svg" alt="img">
 
                         <ul>Екатерина Светлова</ul>
