--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
     <link
             rel="stylesheet"
             href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
@@ -100,19 +99,18 @@
         </div>
     </div>
 </header>
-<script src="./js/script.js"></script>
-<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+
 <section id="hero">
     <div class="container">
         <div class="hero">
-            <h1>Давайте знакомиться: <br>
                 МЫ - <span>строительная компания INSIDE</span>
             </h1>
 
             <div class="hero--group">
                 <div class="hero--group--first">
-                    <img src="./img/photo_2021-06-29_21--1%201.png" alt="img">
+
+                    <img src="./img/photo_2021-06-29_21--1%201.png" alt="img"
+                         class="hero--group--first--img">
 
 
                     <div class="hero--group--first--one">
@@ -124,11 +122,13 @@
                     <button>Связаться с романом</button>
                 </div>
 
-                <div class="hero--group--first">
-                    <img src="./img/photo_2021-06-29_21-%202.png" alt="img">
+                <div class="hero--group--second">
+                    <img src="./img/photo_2021-06-29_21-%202.png" alt="img"
+                         class="hero--group--second--img">
 
 
-                    <div class="hero--group--first--one">
+                    <div class="hero--group--second--two">
+
                         <img src="./img/logo.svg" alt="img">
 
                         <ul>Руслан Исаев</ul>
@@ -138,11 +138,13 @@
                     <button>Связаться с русланом</button>
                 </div>
 
-                <div class="hero--group--first">
-                    <img src="./img/photo_2021-06-29_21--2%201.png" alt="img">
+                <div class="hero--group--third">
+                    <img src="./img/photo_2021-06-29_21--2%201.png" alt="img"
+                         class="hero--group--third--img">
 
 
-                    <div class="hero--group--first--one">
+                    <div class="hero--group--third--three">
+           
                         <img src="./img/logo.svg" alt="img">
 
                         <ul>Екатерина Светлова</ul>
@@ -156,75 +158,9 @@
     </div>
 </section>
 
-<section id="swiper-group">
-    <div class="container">
-        <div class="swiper-group">
-            <h2><span>Познакомьтесь</span> с нашими мастерами</h2>
 
-            <div class="swiper-group--swiper--mySwiper">
-                <div class="swiper--group--swiper--mySwiper--wrapper">
-                    <div class="swiper--group--swiper--mySwiper--wrapper--swiper--slide">
-                        <img src="./img/man.svg" alt="img">
-                        <div class="swiper-slide--one">
-                            <h3>Иван канатаев</h3>
-                            <ul>Оценка мастера</ul>
-                            <div></div>
-                        </div>
-                    </div>
-                    <div class="swiper-slide">Slide 2</div>
-                    <div class="swiper-slide">Slide 3</div>
-                    <div class="swiper-slide">Slide 4</div>
-                    <div class="swiper-slide">Slide 5</div>
-                    <div class="swiper-slide">Slide 6</div>
-                    <div class="swiper-slide">Slide 7</div>
-                    <div class="swiper-slide">Slide 8</div>
-                    <div class="swiper-slide">Slide 9</div>
-                </div>
-                <div class="swiper-pagination"></div>
-            </div>
-        </div>
-    </div>
-</section>
-
-<section id="pro">
-    <div class="container">
-        <div class="pro">
-            <h4>Используем только высокоточное
-                <br> <span>
-                    профессиональное оборудование
-                </span>
-            </h4>
-
-            <div class="pro--blocks">
-                <div class="pro--blocks--first">
-                    <div class="pro--blocks--first--one">
-                        <img src="./img/yellow.png" alt="img">
-                        <div class="pro--blocks--first--one__bloc">
-                            <img src="./img/one.svg" alt="img">
-                            <h2>Лазерное оборудование для идеальной <br>
-                                точности и контроля качества ремонта.
-                            </h2>
-                            <span>Как результат:</span>
-                            <p>Ваши стены и углы будут идеально ровными.</p>
-                        </div>
-                    </div>
-                    <div class="pro--blocks--first--one">
-                        <img src="./img/yellow.png" alt="img">
-                        <div class="pro--blocks--first--one__bloc">
-                            <img src="./img/one.svg" alt="img">
-                            <h2>Лазерное оборудование для идеальной <br>
-                                точности и контроля качества ремонта.
-                            </h2>
-                            <span>Как результат:</span>
-                            <p>Ваши стены и углы будут идеально ровными.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-
+<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 <script src="js/script.js"></script>
 </body>
